--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "service_movie"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 httpx = "^0.23.0"
+pydantic = "^1.10.2"
 
 
 [tool.poetry.group.dev.dependencies]
