--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^1.10.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core"]
