--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pydantic = "^1.10.2"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
 pytest = "^7.1.3"
+pytest-asyncio = "^0.20.1"
+pytest-mock = "^3.10.0"
 
 [build-system]
 requires = ["poetry-core"]
