--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "service_movie"}]
 python = "^3.10"
 httpx = "^0.23.0"
 pydantic = "^1.10.2"
+SQLAlchemy = "^1.4.42"
 
 
 [tool.poetry.group.dev.dependencies]
