--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 httpx = "^0.23.0"
 pydantic = "^1.10.2"
 SQLAlchemy = "^1.4.42"
+alembic = "^1.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
