--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ httpx = "^0.23.0"
 pydantic = "^1.10.2"
 SQLAlchemy = "^1.4.42"
 alembic = "^1.8.1"
+psycopg2 = "^2.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
