--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pydantic = "^1.10.2"
 SQLAlchemy = "^1.4.42"
 alembic = "^1.8.1"
 psycopg2 = "^2.9.5"
+databases = "^0.6.1"
+asyncpg = "^0.27.0"
 
 
 [tool.poetry.group.dev.dependencies]
